--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/list_selector"
     android:orientation="horizontal"
+    android:descendantFocusability="blocksDescendants"
     android:padding="5dip" >
 
     <!--  ListRow Left sied Thumbnail image -->
@@ -17,8 +18,8 @@
 
         <ImageView
             android:id="@+id/picture"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             />
 
     </LinearLayout>
