--- a/app/src/main/res/layout/popup_dialog.xml
+++ b/app/src/main/res/layout/popup_dialog.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_custom_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="2dp"
-    >
+    android:padding="2dp">
 
-    <LinearLayout android:id="@+id/thumbnail"
+    <LinearLayout
+        android:id="@+id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="3dip"
@@ -15,11 +14,10 @@
         android:background="@drawable/image_bg"
         android:layout_marginRight="5dip">
 
-    <ImageView
-        android:id="@+id/tv"
-        android:layout_width="250dp"
-        android:layout_height="250dp"
-        />
+        <ImageView
+            android:id="@+id/tv"
+            android:layout_width="250dp"
+            android:layout_height="250dp" />
 
     </LinearLayout>
 
