--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
     android:background="@drawable/list_selector"
-    android:orientation="horizontal"
     android:descendantFocusability="blocksDescendants">
-
 
     <!--  ListRow Left sied Thumbnail image -->
     <LinearLayout
@@ -56,14 +54,15 @@
         android:textColor="#10bcc9"
         android:textStyle="bold" />
 
+    <!-- Rightend Arrow -->
+    <ImageButton
+        android:id="@+id/remove_option"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="@null"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true" />
 
-    <!--&lt;!&ndash; Rightend Arrow &ndash;&gt;-->
-    <!--<ImageButton-->
-    <!--android:id="@+id/remove_option"-->
-    <!--android:layout_width="50dp"-->
-    <!--android:layout_height="50dp"-->
-    <!--android:background="@null"-->
-    <!--android:layout_alignParentRight="true"-->
-    <!--android:layout_alignParentBottom="true"/>-->
 
-</RelativeLayout>
+</FrameLayout>
+
