adding view once the final restaurant is selected, ability to enlarge pictures

--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/list_selector"
     android:orientation="horizontal"
-    android:descendantFocusability="blocksDescendants">
+    >
 
 
     <!--  ListRow Left sied Thumbnail image -->
@@ -19,6 +19,7 @@
 
         <ImageView
             android:id="@+id/picture"
+            android:adjustViewBounds="true"
             android:layout_width="100dp"
             android:layout_height="100dp" />
 
