finishing up yelp portion, cleaning up code, fixing some bugs

--- a/app/src/main/res/drawable/card_background.xml
+++ b/app/src/main/res/drawable/card_background.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <item>
         <shape
-            android:shape="rectangle"
-            android:dither="true">
+            android:dither="true"
+            android:shape="rectangle">
 
             <corners android:radius="2dp" />
 
@@ -17,8 +17,8 @@
 
     <item android:bottom="2dp">
         <shape
-            android:shape="rectangle"
-            android:dither="true">
+            android:dither="true"
+            android:shape="rectangle">
 
             <corners android:radius="2dp" />
 
