--- a/app/src/main/res/drawable-xhdpi/gradient_bg_hover.xml
+++ b/app/src/main/res/drawable-xhdpi/gradient_bg_hover.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#18d7e5"
+        android:angle="270"
         android:centerColor="#16cedb"
         android:endColor="#09adb9"
-        android:angle="270" />
+        android:startColor="#18d7e5" />
 </shape>
