--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -2,7 +2,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="?android:attr/listPreferredItemHeight"
-    android:background="@drawable/list_selector"
     android:descendantFocusability="blocksDescendants">
 
     <!--  ListRow Left sied Thumbnail image -->
@@ -10,10 +9,10 @@
         android:id="@+id/thumbnail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="3dip"
         android:layout_alignParentLeft="true"
+        android:layout_marginRight="5dip"
         android:background="@drawable/image_bg"
-        android:layout_marginRight="5dip">
+        android:padding="3dip">
 
         <ImageView
             android:id="@+id/picture"
@@ -30,8 +29,8 @@
         android:layout_alignTop="@+id/thumbnail"
         android:layout_toRightOf="@+id/thumbnail"
         android:textColor="#040404"
-        android:typeface="sans"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:typeface="sans" />
 
     <!-- Artist Name -->
     <TextView
@@ -39,9 +38,9 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/name"
-        android:textColor="#343434"
         android:layout_marginTop="1dip"
-        android:layout_toRightOf="@+id/thumbnail" />
+        android:layout_toRightOf="@+id/thumbnail"
+        android:textColor="#343434" />
     <!-- Rightend Duration -->
     <TextView
         android:id="@+id/duration"
@@ -49,8 +48,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignTop="@id/title"
-        android:gravity="right"
         android:layout_marginRight="5dip"
+        android:gravity="right"
         android:textColor="#10bcc9"
         android:textStyle="bold" />
 
@@ -59,9 +58,9 @@
         android:id="@+id/remove_option"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@null"
+        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true" />
+        android:background="@null" />
 
 
 </FrameLayout>
