cleaning up general structure

--- a/app/src/main/res/layout/food_list.xml
+++ b/app/src/main/res/layout/food_list.xml
@@ -8,7 +8,8 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginRight="50dip">
+        android:layout_marginRight="50dip"
+        android:layout_marginEnd="50dip">
 
     <!-- Food Picture -->
     <LinearLayout
@@ -16,7 +17,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_marginRight="5dip"
+        android:layout_marginEnd="5dip"
         android:background="@drawable/image_bg"
         android:padding="3dip">
 
@@ -37,6 +40,7 @@
         android:layout_marginEnd="10dip"
         android:layout_marginRight="10dip"
         android:layout_toRightOf="@+id/thumbnail"
+        android:layout_toEndOf="@+id/thumbnail"
         android:textColor="#040404"
         android:textStyle="bold"
         android:typeface="sans" />
@@ -73,7 +77,8 @@
             android:id="@+id/reviews"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dip" />
+            android:layout_marginLeft="10dip"
+            android:layout_marginStart="10dip"/>
 
     </LinearLayout>
 
@@ -94,6 +99,7 @@
         android:adjustViewBounds="true"
         android:scaleType="fitEnd"
         android:layout_marginRight="10dip"
+        android:layout_marginEnd="10dip"
         />
 
         <TextView
@@ -106,6 +112,7 @@
             android:adjustViewBounds="true"
             android:scaleType="fitEnd"
             android:layout_marginRight="10dip"
+            android:layout_marginEnd="10dip"
             />
 
     </RelativeLayout>
